--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,9 +70,10 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha01"
     implementation "androidx.compose.compiler:compiler:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-rc01'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-rc01"
+    implementation "androidx.activity:activity-compose:1.3.1"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
+    implementation "io.coil-kt:coil-compose:1.4.0"
 
     // lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle_version"
