--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
     implementation "io.coil-kt:coil-compose:1.4.0"
 
+    // video player
+    implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
+
     // lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$rootProject.lifecycle_version"
@@ -99,6 +102,7 @@ dependencies {
 
     // room
     implementation "androidx.room:room-runtime:$rootProject.room_version"
+    implementation "androidx.room:room-ktx:$rootProject.room_version"
     kapt "androidx.room:room-compiler:$rootProject.room_version"
 
 
