--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ ext {
     retrofit = "2.4.0"
     moshi = "1.7.0"
     retrofit_coroutine_adapter = "0.9.2"
-    room_version = "2.1.0-alpha03"
+    room_version = "2.4.0-rc01"
     lifecycle_version = "2.0.0"
     okHttpVersion = '3.11.0'
     koin_version= "3.1.4"
