--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "hr.tostipanic.video_feed.TestRunner"
     }
 
     buildTypes {
@@ -129,5 +128,8 @@ dependencies {
     androidTestImplementation "io.mockk:mockk-android:1.10.5"
     androidTestImplementation 'androidx.test:runner:1.4.0'
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.1.0-rc01"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
 }
